<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnoozeAlarm</string>
    <string name="action_settings">Settings</string>
    <string name="math_example">(15 * 4) + 6</string>
    <string name="answer_hint">Answer</string>
    <string name="snooze_button">Snooze</string>
    <string name="correct">correct</string>
    <string name="incorrect">incorrect</string>
    <string name="background">background</string>
</resources>