<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_answer"
        android:layout_centerHorizontal="true"
        android:text="@string/math_example"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/edit_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/answer_hint"
        android:inputType="numberDecimal"
        android:textSize="36sp" />

    <Button
        android:id="@+id/snoozeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_answer"
        android:layout_centerHorizontal="true"
        android:text="@string/snooze_button"
        android:textSize="36sp" 
        android:onClick="hasAnswer"/>

    <ImageView
        android:id="@+id/check_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView1"
        android:contentDescription="@string/correct"
        android:src="@drawable/correct_icon"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/x_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView1"
        android:layout_centerVertical="true"
        android:contentDescription="@string/incorrect"
        android:src="@drawable/wrong_answer"
        android:visibility="invisible" />

   
</RelativeLayout>